--- a/index.html
+++ b/index.html
@@ -26,5 +26,9 @@
   });
 </script>
 
+  <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
+data-preference-id="611013744-a4265ea8-0c1c-435d-823e-2417803731c1" data-source="button">
+</script>
+
 </body>
 </html>
