--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
   <meta charset="UTF-8">
   <title>Imagen secreta #1</title>
 </head>
-<body>
+<body style="font-family: sans-serif; text-align: center; padding: 40px;">
   <h1>Imagen secreta #1</h1>
   <p>Precio: $10 MXN</p>
+  <p>Haz clic en el botón para pagar y ver la imagen completa.</p>
 
   <!-- BOTÓN DE MERCADOPAGO -->
   <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
-    data-preference-id="611013744-a4265ea8-0c1c-435d-823e-2417803731c1" data-source="button">
+    data-preference-id="611013744-a4265ea8-0c1c-435d-823e-2417803731c1"
+    data-source="button">
   </script>
 </body>
 </html>
