imagen1-secreta.html

--- a/imagen1-secreta.html
+++ b/imagen1-secreta.html
@@ -1,13 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Imagen Secreta #1</title>
+  <title>Imagen secreta desbloqueada</title>
 </head>
-<body>
-  <h1>Gracias por tu compra ❤️</h1>
-  <p>Esta es la imagen secreta:</p>
-  <img src="imagenes/imagen1-completa.jpg" style="max-width: 100%;">
+<body style="text-align: center; font-family: sans-serif; padding: 40px;">
+  <h1>¡Gracias por tu compra! 🖼️</h1>
+  <p>Aquí tienes tu imagen secreta:</p>
+  <img src="imagenes/imagen1-completa.jpg" alt="Imagen desbloqueada" style="max-width: 90%; border: 1px solid #ccc;">
 </body>
 </html>
