--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Imagen secreta #1</title>
+  <script src="https://sdk.mercadopago.com/js/v2"></script>
 </head>
 <body style="font-family: sans-serif; text-align: center; padding: 40px;">
   <h1>Imagen secreta #1</h1>
