--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Imagen secreta #1</title>
   <!-- SDK moderno -->
-  <script src="https://sdk.mercadopago.com/js/v2"></script>
+  <script src="https://api.mercadopago.com"></script>
 </head>
 <body style="text-align: center; font-family: sans-serif; padding: 40px;">
 
