--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
   <p>Precio: $10 MXN</p>
   
   <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
-    data-preference-id="611013744-a4265ea8-0c1c-435d-823e-2417803731c1"
-    data-source="button">
-  </script>
+data-preference-id="611013744-2ec4434b-77a5-43dc-b91e-41a7af439e90" data-source="button">
+</script>
 
   <hr style="margin: 40px 0;">
 
