--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 
   <h1>Imagen secreta #1</h1>
   <p>Precio: $10 MXN</p>
+  <p>Haz clic para pagar y desbloquear la imagen completa.</p>
   
   <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
 data-preference-id="611013744-2ec4434b-77a5-43dc-b91e-41a7af439e90" data-source="button">
 </script>
-
-  <hr style="margin: 40px 0;">
 
 </body>
 </html>
