--- a/index.html
+++ b/index.html
@@ -2,20 +2,87 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Imagen secreta #1</title>
+  <title>OnePick</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(145deg, #0f0f10, #1c1c1e);
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
+    .card {
+      background-color: #1e1e21;
+      padding: 30px 40px;
+      border-radius: 20px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+      text-align: center;
+      max-width: 350px;
+      width: 90%;
+      border: 1px solid #2e2e33;
+    }
+
+    .card h1 {
+      font-size: 1.6rem;
+      margin-bottom: 5px;
+    }
+
+    .icons {
+      font-size: 1.5rem;
+      margin-bottom: 20px;
+    }
+
+    .card p {
+      font-size: 1rem;
+      margin: 10px 0 15px;
+      color: #ccc;
+    }
+
+    .price {
+      color: #00c853;
+      font-weight: bold;
+    }
+
+    .card a {
+      color: #00b0ff;
+      text-decoration: underline;
+      font-size: 0.85rem;
+      display: inline-block;
+      margin-top: 5px;
+    }
+
+    .mercadopago-button {
+      width: 100%;
+    }
+  </style>
 </head>
-<body style="text-align: center; font-family: sans-serif; padding: 40px;">
+<body>
 
-  <h1>Imagen secreta #1</h1>
-  <p>Precio: $10 MXN</p>
-  <p>Haz clic para pagar y desbloquear la imagen completa.</p>
-  
- <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
-data-preference-id="611013744-7c9f5210-0b9c-431c-996a-e5e974475fbb" data-source="button">
-</script>
+  <div class="card">
+    <h1>OnePick</h1>
+    <div class="icons">🍀🎯💰</div>
 
-  
+    <p>Desbloquea los pronósticos completos ahora.</p>
+    <p class="price">Precio: $20 MXN</p>
+    <p>Haz clic en el botón "Pagar" y desbloquea la oportunidad de aumentar tus chances de ganar.</p>
+
+    <!-- BOTÓN MERCADOPAGO -->
+    <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
+      data-preference-id="611013744-7c9f5210-0b9c-431c-996a-e5e974475fbb"
+      data-source="button">
+    </script>
+
+    <br>
+    <p style="font-size: 0.85rem; color: #888;">Al pagar, estás aceptando los términos y condiciones de nuestra comunidad.</p>
+    <a href="https://tusitio.com/terminos" target="_blank">Consulta términos y condiciones</a>
+  </div>
 
 </body>
 </html>
