--- a/SS13062025.html
+++ b/SS13062025.html
@@ -52,7 +52,7 @@
 
   <div class="card">
     <h1>¡Gracias por tu compra! 🖼️</h1>
-    <p>Aquí tienes los pronósticos de hoy:</p>
+    <p>Aquí tienes los pronósticos de hoy 13/06/2025:</p>
     <img src="imagenes/imagen1-completa.jpg" alt="Imagen desbloqueada">
   </div>
 
