--- a/index.html
+++ b/index.html
@@ -75,9 +75,8 @@
 
     <!-- BOTÓN MERCADOPAGO -->
     <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
-      data-preference-id="611013744-7c9f5210-0b9c-431c-996a-e5e974475fbb"
-      data-source="button">
-    </script>
+data-preference-id="611013744-ecd05cf6-37ea-477a-a382-2e06fc3d6568" data-source="button">
+</script>
 
     <br>
     <p style="font-size: 0.85rem; color: #888;">Al pagar, estás aceptando los términos y condiciones de nuestra comunidad.</p>
