sSac0fb0be.html

--- a/sSac0fb0be.html
+++ b/sSac0fb0be.html
@@ -54,6 +54,16 @@
     <h1>¡Gracias por tu compra! 🖼️</h1>
     <p>Aquí tienes los pronósticos de hoy:</p>
     <img src="imagenes/sSac0fb0be.jpg" alt="Imagen desbloqueada">
+    <br>
+<p>⚾ 1. Ataques potentes y constantes.</p>
+    <p>Durango es el equipo más productivo del circuito, con un promedio de 580 carreras esta temporada, destacándose como la ofensiva más demoledora.</p>
+    <p>Tigres, aunque débiles en general, han encendido su bateado: en un reciente partido vencieron a Veracruz 15‑11, conectando 4 HR y acumulando 19 hits. Esto demuestra su capacidad para anotar mucho cuando conectan.</p>
+ <p>🧢 2. Pitcheo frágil por los dos lados.</p>
+   <p>Los pitcheos de Durango registran una ERA colectiva elevada: 7.92 carreras limpias es difícil contener ofensivas potentes.</p>
+  <p>Tigres no se quedan atrás: permiten promedio de 6.05 ERA y han sido superados por la media del circuito.</p>
+ <p>🧮 3. Diferenciales recientes de anotaciones.</p>
+    <p>Ambos equipos han estado involucrados en juegos muy ofensivos: Durango permitió 384 carreras y anotó 334 en casa; Tigres permitieron 294 y anotaron 245 en gira, con diferencia de –49. Esto indica enfrentamientos con amplios marcadores.</p>
+    
   </div>
 
 </body>
