sSac0fb0be.html

--- a/sSac0fb0be.html
+++ b/sSac0fb0be.html
@@ -53,7 +53,7 @@
   <div class="card">
     <h1>¡Gracias por tu compra! 🖼️</h1>
     <p>Aquí tienes los pronósticos de hoy:</p>
-    <img src="imagenes/sSac0fb0be.jpg" alt="Imagen desbloqueada">
+    <img src="imagenes/sSac0fb0be.jpeg" alt="Imagen desbloqueada">
     <br>
 <p>⚾ 1. Ataques potentes y constantes.</p>
     <p>Durango es el equipo más productivo del circuito, con un promedio de 580 carreras esta temporada, destacándose como la ofensiva más demoledora.</p>
