Update and rename sSac0fb0be.html to sSad0fb0be.html

--- a/sSad0fb0be.html
+++ b/sSad0fb0be.html
@@ -68,16 +68,20 @@
     <div class="card">
       <h1>¡Gracias por tu compra! 🖼️</h1>
     <p>Aquí tienes los pronósticos de hoy:</p>
-    <img src="imagenes/sSac0fb0be.jpeg" alt="Imagen desbloqueada">
+    <img src="imagenes/sSad0fb0be.jpeg" alt="Imagen desbloqueada">
     <br>
-<p>⚾ 1. Ataques potentes y constantes.</p>
-    <p>Durango es el equipo más productivo del circuito, con un promedio de 580 carreras esta temporada, destacándose como la ofensiva más demoledora.</p>
-    <p>Tigres, aunque débiles en general, han encendido su bateado: en un reciente partido vencieron a Veracruz 15‑11, conectando 4 HR y acumulando 19 hits. Esto demuestra su capacidad para anotar mucho cuando conectan.</p>
- <p>🧢 2. Pitcheo frágil por los dos lados.</p>
-   <p>Los pitcheos de Durango registran una ERA colectiva elevada: 7.92 carreras limpias es difícil contener ofensivas potentes.</p>
-  <p>Tigres no se quedan atrás: permiten promedio de 6.05 ERA y han sido superados por la media del circuito.</p>
- <p>🧮 3. Diferenciales recientes de anotaciones.</p>
-    <p>Ambos equipos han estado involucrados en juegos muy ofensivos: Durango permitió 384 carreras y anotó 334 en casa; Tigres permitieron 294 y anotaron 245 en gira, con diferencia de –49. Esto indica enfrentamientos con amplios marcadores.</p>
+<p><strong>BRAVOS</strong></p>
+    <p>🧮 <strong>Dominio reciente:</strong> En el primer juego de la serie el viernes, Atlanta ganó 12‑4 con jonrones clave de Michael Harris II y Marcell Ozuna, remontando un déficit en casa.</p>
+    <p>⚾ Pitcher favorito: Hoy sube Spencer Strider, quien aún no ha ganado esta temporada, pero se enfrenta al peor equipo de la liga (Colorado, 13–56), con una batería de estadísticas a su favor.</p>
+ <p><strong>UNDER ASTROS VS TWINS</strong></p>
+   <p>🔥 Duelo de pitcheo de élite.</p>
+  <p>Hunter Brown (Astros) llega con una efectividad asombrosa de 1.82 ERA, 10.6 K/9 y solo 0.7 HR/9. Ha permitido 0 o 1 carrera en 9 de sus últimos 11 inicios.</p>
+ <p>🧢 Joe Ryan (Twins), con un 7‑2 y 2.96 ERA, también ha sido sólido, especialmente en casa, aunque ha cedido 3+ carreras en tres de sus últimos cuatro salidas, generalmente sin batters poderosos enfrente.</p>
+    <p><strong>OVER YANKEES VS RED SOX</strong></p>
+
+    <p>Alta ofensiva de ambos equipos.</p>
+    <p>🗽 Los Yankees están promediando 6.5 carreras y 9.2 hits por encuentro en sus últimos cinco partidos. Eso habla de su poderosa capacidad ofensiva reciente.</p>
+    <p>Boston también ha tenido juegos con mucha puntería: su serie de 11‑7 el domingo y las últimas cinco carreras combinadas en solo dos juegos reflejan un poder considerable.</p>
     </div>
   </div>
 </body>
