--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ data-preference-id="611013744-f80e3e81-8014-44bf-93be-60c26c100e43" data-source=
     
     <br>
     <p style="font-size: 0.85rem; color: #888;">Al pagar, estás aceptando los términos y condiciones de nuestra comunidad.</p>
-    <a href="https://tusitio.com/terminos" target="_blank">Consulta términos y condiciones</a>
+    <a href="https://secretscores.github.io/secretscores/terminos.html" target="_blank">Consulta términos y condiciones</a>
   </div>
 
 </body>
