--- a/sSad0fb0be.html
+++ b/sSad0fb0be.html
@@ -68,7 +68,7 @@
     <div class="card">
       <h1>¡Gracias por tu compra! 🖼️</h1>
     <p>Aquí tienes los pronósticos de hoy:</p>
-    <img src="imagenes/sSad0fb0be.jpg" alt="Imagen desbloqueada">
+    <img src="imagenes/9bbf6557-e6c2-4458-bf93-74d85e1f20cf.jpeg" alt="Imagen desbloqueada">
     <br>
 <p><strong>BRAVOS</strong></p>
     <p>🧮 <strong>Dominio reciente:</strong> En el primer juego de la serie el viernes, Atlanta ganó 12‑4 con jonrones clave de Michael Harris II y Marcell Ozuna, remontando un déficit en casa.</p>
