--- a/sSad0fb0be.html
+++ b/sSad0fb0be.html
@@ -68,7 +68,7 @@
     <div class="card">
       <h1>¡Gracias por tu compra! 🖼️</h1>
     <p>Aquí tienes los pronósticos de hoy:</p>
-    <img src="imagenes/c4276c9a-bed6.jpeg" alt="Imagen desbloqueada">
+    <img src="imagenes/c4276c9a-bed6.jpg" alt="Imagen desbloqueada">
     <br>
     </div>
   </div>
