--- a/terminos.html
+++ b/terminos.html
@@ -66,19 +66,19 @@
     <p><strong>Fecha de entrada en vigor:</strong> 11 de junio de 2025</p>
 
     <h2>1. Información general</h2>
-    <p>Este sitio web tiene como finalidad permitir al usuario desbloquear una imagen digital a cambio de un pago único de $20 pesos mexicanos. El acceso a la imagen está condicionado al cumplimiento de los presentes términos y condiciones.</p>
+    <p>Este sitio web tiene como finalidad permitir al usuario acceder a pronósticos deportivos y recomendaciones de apuestas de manera informativa, a cambio de un pago único de $20 pesos mexicanos. El contenido ofrecido es generado según el análisis personal del autor y no debe considerarse una garantía de resultados.</p>
 
     <h2>2. Aceptación de los términos</h2>
-    <p>Al realizar el pago, el usuario acepta de manera expresa e inequívoca estos términos y condiciones.</p>
+    <p>Al realizar el pago, el usuario acepta de manera expresa e inequívoca estos términos y condiciones. El usuario acepta que queda prohibida la distribución o compartición del contenido sin autorización previa del Onepick. La compra otorga sólo el derecho a verla, no a difundirla ni comercializarla.</p>
 
     <h2>3. Producto ofrecido</h2>
-    <p>El producto es una imagen digital, visible en su versión completa tras el pago. Esta imagen puede estar relacionada con entretenimiento, arte digital, contenido digital deportivo o contenido temático. No se trata de contenido para adultos.</p>
+    <p>El producto es un conjunto de pronósticos deportivos para una fecha determinada. Están basados en el análisis personal del administrador y se entregan en formato digital tras el pago. No se trata de apuestas, ni se gestionan apuestas en nombre de terceros. El contenido puede ser texto, imagen digital o ambas.</p>
 
     <h2>4. Pago y acceso</h2>
     <p>El pago es único, no recurrente, y se realiza a través de una plataforma segura como MercadoPago. El acceso a la imagen se habilita inmediatamente después del pago, ya sea mediante redirección automática o a través de un enlace de redireccionamiento disponible en la página de pago.</p>
 
-    <h2>5. Propiedad intelectual</h2>
-    <p>Queda prohibida la distribución, reproducción o compartición de la imagen sin autorización previa del equipo Onepick. La compra otorga sólo el derecho a verla, no a difundirla ni comercializarla.</p>
+    <h2>5. Limitaciones de Responsabilidades</h2>
+    <p>El usuario entiende y acepta que los pronósticos ofrecidos no garantizan resultados positivos ni retornos económicos. Se trata de recomendaciones informativas que el usuario decide usar bajo su propio criterio y responsabilidad. El administrador no es responsable por decisiones tomadas por el usuario con base en estos contenidos.</p>
 
     <h2>6. Política de no reembolso</h2>
     <p>Debido a la naturaleza digital del contenido y al acceso inmediato tras el pago, <strong>no se realizarán reembolsos</strong> bajo ninguna circunstancia.</p>
