--- a/terminos.html
+++ b/terminos.html
@@ -51,6 +51,12 @@
       text-decoration: underline;
     }
 
+    .back-link {
+      display: inline-block;
+      margin-top: 20px;
+      font-size: 0.95rem;
+    }
+
     .footer {
       margin-top: 30px;
       font-size: 0.9rem;
@@ -97,6 +103,12 @@
     <div class="footer">
       <p>Al pagar, el usuario declara haber leído, comprendido y aceptado estos términos y condiciones.</p>
     </div>
+
+<br>
+  <p class="back-link">
+    <a href="https://secretscores.github.io/secretscores/index.html">🔙 Volver a la página principal</a>
+  </p>
+
   </div>
 </body>
 </html>
