--- a/sSae0fb0be.html
+++ b/sSae0fb0be.html
@@ -2,75 +2,123 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Imagen secreta desbloqueada</title>
+  <title>Imagen desbloqueada - OnePick</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
-    html, body {
+    body {
       margin: 0;
       padding: 0;
-      height: 100%;
       background: linear-gradient(145deg, #0f0f10, #1c1c1e);
       color: #fff;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
-    }
-
-    .wrapper {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 40px 20px;
-      min-height: 100%;
+      flex-direction: column;
+      min-height: 100vh;
     }
 
     .card {
       background-color: #1e1e21;
-      padding: 30px;
+      padding: 30px 30px 40px;
       border-radius: 20px;
       box-shadow: 0 10px 30px rgba(0,0,0,0.3);
-      max-width: 500px;
-      width: 100%;
-      border: 1px solid #2e2e33;
       text-align: center;
+      max-width: 500px;
+      width: 90%;
+      border: 1px solid #2e2e33;
     }
 
-    .card h1 {
-      font-size: 1.5rem;
+    h1 {
+      font-size: 1.8rem;
       margin-bottom: 10px;
+      color: #4caf50;
     }
 
-    .card p {
+    .message {
       font-size: 1rem;
-      margin: 10px 0 20px;
+      margin-bottom: 20px;
       color: #ccc;
     }
 
-    .card img {
+    img {
       max-width: 100%;
       border-radius: 12px;
-      border: 1px solid #444;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
-      display: block;
-      margin: 0 auto 20px;
+      margin: 20px 0;
+      border: 2px solid #333;
     }
 
-    @media (max-height: 700px) {
-      html, body {
-        align-items: flex-start;
-      }
+    .actions {
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+      margin-top: 20px;
+    }
+
+    .actions a {
+      background-color: #4caf50;
+      color: #fff;
+      text-decoration: none;
+      padding: 10px 18px;
+      border-radius: 8px;
+      font-weight: bold;
+      transition: background 0.2s ease;
+    }
+
+    .actions a:hover {
+      background-color: #43a047;
+    }
+
+    .footer {
+      margin-top: 25px;
+      font-size: 0.85rem;
+      color: #888;
+    }
+
+    .footer a {
+      color: #4caf50;
+      text-decoration: none;
+    }
+
+    .footer a:hover {
+      text-decoration: underline;
+    }
+
+    .watermark {
+      position: relative;
+    }
+
+    .watermark::after {
+      content: "OnePick";
+      position: absolute;
+      bottom: 8px;
+      right: 12px;
+      font-size: 0.7rem;
+      color: rgba(255,255,255,0.3);
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <div class="wrapper">
-    <div class="card">
-      <h1>¡Gracias por tu compra! 🖼️</h1>
-    <p>Aquí tienes los pronósticos de hoy:</p>
-    <img src="imagenes/c4276c9a-bed6.JPG" alt="Imagen desbloqueada">
-    <br>
+
+  <div class="card">
+    <h1>¡Gracias por tu compra! 🖼️</h1>
+    <p class="message">Aquí tienes el pronóstico exclusivo del día. Este análisis fue preparado especialmente para ayudarte a tomar decisiones informadas.</p>
+
+    <div class="watermark">
+      <img src="imagenes/c4276c9a-bed6.JPG" alt="Imagen desbloqueada">
+    </div>
+
+    <div class="actions">
+      <a href="https://instagram.com/Onepic_winever" target="_blank">📲 Síguenos en Instagram</a>
+      <a href="https://instagram.com/Onepic_winever" target="_blank">📩 Envíanos tu experiencia</a>
+    </div>
+
+    <div class="footer">
+      ¿Problemas para ver la imagen? <a href="https://instagram.com/Onepic_winever" target="_blank">Contáctanos aquí</a>.
     </div>
   </div>
+
 </body>
 </html>
