--- a/sSae0fb0be.html
+++ b/sSae0fb0be.html
@@ -111,8 +111,8 @@
     </div>
 
     <div class="actions">
-      <a href="https://instagram.com/Onepic_winever" target="_blank">📲 Síguenos en Instagram</a>
-      <a href="https://instagram.com/Onepic_winever" target="_blank">📩 Envíanos tu experiencia</a>
+      <a href="https://instagram.com/onepick_winever" target="_blank">📲 Síguenos en Instagram</a>
+      <a href="https://instagram.com/onepick_winever" target="_blank">📩 Envíanos tu experiencia</a>
     </div>
 
     <div class="footer">
