--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ data-preference-id="611013744-f80e3e81-8014-44bf-93be-60c26c100e43" data-source=
 
     <div class="footer">
       +1200 seguidores en 
-      <a href="https://instagram.com/onepic_winever" target="_blank" title="Visita nuestro Instagram">
+      <a href="https://instagram.com/onepick_winever" target="_blank" title="Visita nuestro Instagram">
         <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram">
       </a>
     </div>
