--- a/terminos.html
+++ b/terminos.html
@@ -97,7 +97,7 @@
 
     <h2>9. Contacto</h2>
     <p>Para cualquier duda relacionada con estos términos, puedes enviar un mensaje directo a nuestra cuenta oficial de Instagram: 
-      <a href="https://instagram.com/Onepic_winever" target="_blank">@Onepic_winever</a>
+      <a href="https://instagram.com/onepick_winever" target="_blank">@Onepic_winever</a>
     </p>
 
     <div class="footer">
