--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
 <body>
 
   <div class="card">
-    <h1>OnePick 🎯</h1>
+    <img src="imagenes/oficiallogo.png" alt="Logo OnePick" class="logo"> <!-- Cambia la ruta aquí -->
+    <h1>OnePick</h1>
     <div class="icons">🍀🎯💰</div>
     <p class="sub">Tu mejor aliado para tomar decisiones informadas hoy.</p>
     <p class="price">Solo $20 MXN</p>
