--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
       border: 1px solid #2e2e33;
     }
 
+     .logo {
+      width: 80px;
+      max-width: 100%;
+      height: auto;
+      margin: 0 auto 15px;
+      display: block;
+      object-fit: contain;
+    }
+
     h1 {
       font-size: 1.8rem;
       margin-bottom: 10px;
