--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <img src="imagenes/oficiallogo.png" alt="Logo OnePick" class="logo"> <!-- Cambia la ruta aquí -->
     <h1>OnePick</h1>
     <div class="icons">🍀🎯💰</div>
-    <p class="sub">Tu mejor aliado para tomar decisiones informadas hoy.</p>
+    <!-- <p class="sub">Tu mejor aliado para tomar decisiones informadas hoy.</p> -->
     <p class="price">Solo $20 MXN</p>
     <p class="note">Accede al pick exclusivo del día con una sola compra.</p>
     <p>¡Haz clic para pagar y desbloquear el pronóstico completo ahora!</p>
