--- a/terminos.html
+++ b/terminos.html
@@ -28,6 +28,15 @@
       text-align: left;
     }
 
+    .logo {
+      width: 120px;
+      max-width: 140%;
+      height: auto;
+      margin: 0 auto 15px;
+      display: block;
+      object-fit: contain;
+    }
+
     h1 {
       font-size: 1.6rem;
       margin-bottom: 20px;
@@ -67,6 +76,9 @@
 </head>
 <body>
   <div class="card">
+
+    <img src="imagenes/logo-onepick.png" alt="Logo OnePick" class="logo">
+    
     <h1>Términos y Condiciones de Uso</h1>
 
     <p><strong>Fecha de entrada en vigor:</strong> 11 de junio de 2025</p>
