--- a/sSae0fb0be.html
+++ b/sSae0fb0be.html
@@ -30,6 +30,15 @@
       border: 1px solid #2e2e33;
     }
 
+.logo {
+      width: 120px;
+      max-width: 140%;
+      height: auto;
+      margin: 0 auto 15px;
+      display: block;
+      object-fit: contain;
+    }
+    
     h1 {
       font-size: 1.8rem;
       margin-bottom: 10px;
@@ -103,6 +112,8 @@
 <body>
 
   <div class="card">
+
+    <img src="imagenes/logo-onepick.png" alt="Logo OnePick" class="logo">
     <h1>¡Gracias por tu compra! 🖼️</h1>
     <p class="message">Aquí tienes el pronóstico exclusivo del día. Este análisis fue preparado especialmente para ayudarte a tomar decisiones informadas.</p>
 
