--- a/terminos.html
+++ b/terminos.html
@@ -77,7 +77,7 @@
 <body>
   <div class="card">
 
-    <img src="imagenes/logo-onepick.png" alt="Logo OnePick" class="logo">
+    <img src="imagenes/oficiallogo.png" alt="Logo OnePick" class="logo">
     
     <h1>Términos y Condiciones de Uso</h1>
 
