--- a/sSae0fb0be.html
+++ b/sSae0fb0be.html
@@ -113,7 +113,7 @@
 
   <div class="card">
 
-    <img src="imagenes/logo-onepick.png" alt="Logo OnePick" class="logo">
+    <img src="imagenes/oficiallogo.png" alt="Logo OnePick" class="logo">
     <h1>¡Gracias por tu compra! 🖼️</h1>
     <p class="message">Aquí tienes el pronóstico exclusivo del día. Este análisis fue preparado especialmente para ayudarte a tomar decisiones informadas.</p>
 
