--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>OnePick - Pronósticos del día</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
   <style>
-    body {
+   body {
       margin: 0;
-      padding: 0;
+      padding-top: 40px;
+      padding-bottom: 40px;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: linear-gradient(145deg, #0f0f10, #1c1c1e);
       color: #fff;
@@ -16,7 +17,9 @@
       justify-content: center;
       align-items: center;
       flex-direction: column;
-      min-height: 100vh;
+      min-height: 100dvh;
+      height: 100dvh;
+      box-sizing: border-box;
     }
 
     .card {
