--- a/terminos.html
+++ b/terminos.html
@@ -3,18 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <title>Términos y Condiciones</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
   <style>
-    body {
+     body {
       margin: 0;
-      padding: 40px 0;
-      min-height: 100vh;
+      padding-top: 40px;
+      padding-bottom: 40px;
+      min-height: 100dvh;
       background: linear-gradient(145deg, #0f0f10, #1c1c1e);
       color: #fff;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       display: flex;
       justify-content: center;
+      box-sizing: border-box;
     }
 
     .card {
