--- a/terminos.html
+++ b/terminos.html
@@ -3,20 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <title>Términos y Condiciones</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-     body {
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
       margin: 0;
-      padding-top: 40px;
-      padding-bottom: 40px;
-      min-height: 100dvh;
+      padding: 40px 20px;
+      min-height: 100vh;
       background: linear-gradient(145deg, #0f0f10, #1c1c1e);
       color: #fff;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       display: flex;
       justify-content: center;
-      box-sizing: border-box;
+      align-items: center;
     }
 
     .card {
@@ -25,14 +27,14 @@
       border-radius: 20px;
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
       max-width: 700px;
-      width: 90%;
+      width: 100%;
       border: 1px solid #2e2e33;
       text-align: left;
     }
 
     .logo {
       width: 120px;
-      max-width: 140%;
+      max-width: 100%;
       height: auto;
       margin: 0 auto 15px;
       display: block;
@@ -118,10 +120,9 @@
       <p>Al pagar, el usuario declara haber leído, comprendido y aceptado estos términos y condiciones.</p>
     </div>
 
-<br>
-  <p class="back-link">
-    <a href="https://secretscores.github.io/secretscores/index.html">🔙 Volver a la página principal</a>
-  </p>
+    <p class="back-link">
+      <a href="https://secretscores.github.io/secretscores/index.html">🔙 Volver a la página principal</a>
+    </p>
 
   </div>
 </body>
