--- a/sSae0fb0be.html
+++ b/sSae0fb0be.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Imagen desbloqueada - OnePick</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
-      padding-top: 40px;
-      padding-bottom: 40px;
+      padding: 40px 20px;
       background: linear-gradient(145deg, #0f0f10, #1c1c1e);
       color: #fff;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -17,9 +19,7 @@
       justify-content: center;
       align-items: center;
       flex-direction: column;
-      min-height: 100dvh;
-      height: 100dvh;
-      box-sizing: border-box;
+      min-height: 100vh;
     }
 
     .card {
@@ -29,19 +29,19 @@
       box-shadow: 0 10px 30px rgba(0,0,0,0.3);
       text-align: center;
       max-width: 500px;
-      width: 90%;
+      width: 100%;
       border: 1px solid #2e2e33;
     }
 
-.logo {
+    .logo {
       width: 120px;
-      max-width: 140%;
+      max-width: 100%;
       height: auto;
       margin: 0 auto 15px;
       display: block;
       object-fit: contain;
     }
-    
+
     h1 {
       font-size: 1.8rem;
       margin-bottom: 10px;
@@ -54,7 +54,7 @@
       color: #ccc;
     }
 
-    img {
+    .watermark img {
       max-width: 100%;
       border-radius: 12px;
       margin: 20px 0;
@@ -110,12 +110,12 @@
       color: rgba(255,255,255,0.3);
       font-weight: bold;
     }
+
   </style>
 </head>
 <body>
 
   <div class="card">
-
     <img src="imagenes/oficiallogo.png" alt="Logo OnePick" class="logo">
     <h1>¡Gracias por tu compra! 🖼️</h1>
     <p class="message">Aquí tienes el pronóstico exclusivo del día. Este análisis fue preparado especialmente para ayudarte a tomar decisiones informadas.</p>
