--- a/sSag0fb0be.html
+++ b/sSag0fb0be.html
@@ -5,26 +5,28 @@
   <title>Imagen desbloqueada - OnePick</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    * {
-      box-sizing: border-box;
+    * { box-sizing: border-box; }
+
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      background: linear-gradient(145deg, #0f0f10, #1c1c1e);
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: #fff;
     }
 
-    body {
-      margin: 0;
-      padding: 40px 20px;
-      background: linear-gradient(145deg, #0f0f10, #1c1c1e);
-      color: #fff;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    .container {
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      flex-direction: column;
-      min-height: 100vh;
+      padding: 20px;
     }
 
     .card {
       background-color: #1e1e21;
-      padding: 30px 30px 40px;
+      padding: 30px;
       border-radius: 20px;
       box-shadow: 0 10px 30px rgba(0,0,0,0.3);
       text-align: center;
@@ -35,11 +37,10 @@
 
     .logo {
       width: 120px;
-      max-width: 100%;
-      height: auto;
-      margin: 0 auto 15px;
+      margin-bottom: 15px;
       display: block;
-      object-fit: contain;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     h1 {
@@ -50,51 +51,8 @@
 
     .message {
       font-size: 1rem;
-      margin-bottom: 20px;
       color: #ccc;
-    }
-
-    .watermark img {
-      max-width: 100%;
-      border-radius: 12px;
-      margin: 20px 0;
-      border: 2px solid #333;
-    }
-
-    .actions {
-      display: flex;
-      flex-direction: column;
-      gap: 12px;
-      margin-top: 20px;
-    }
-
-    .actions a {
-      background-color: #4caf50;
-      color: #fff;
-      text-decoration: none;
-      padding: 10px 18px;
-      border-radius: 8px;
-      font-weight: bold;
-      transition: background 0.2s ease;
-    }
-
-    .actions a:hover {
-      background-color: #43a047;
-    }
-
-    .footer {
-      margin-top: 25px;
-      font-size: 0.85rem;
-      color: #888;
-    }
-
-    .footer a {
-      color: #4caf50;
-      text-decoration: none;
-    }
-
-    .footer a:hover {
-      text-decoration: underline;
+      margin-bottom: 20px;
     }
 
     .watermark {
@@ -111,26 +69,65 @@
       font-weight: bold;
     }
 
+    .watermark img {
+      max-width: 100%;
+      border-radius: 12px;
+      margin: 20px 0;
+      border: 2px solid #333;
+    }
+
+    .actions {
+      margin-top: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
+
+    .actions a {
+      background-color: #4caf50;
+      color: #fff;
+      padding: 10px 18px;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .actions a:hover {
+      background-color: #43a047;
+    }
+
+    .footer {
+      margin-top: 25px;
+      font-size: 0.85rem;
+      color: #888;
+    }
+
+    .footer a {
+      color: #4caf50;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
 
-  <div class="card">
-    <img src="imagenes/oficiallogo.png" alt="Logo OnePick" class="logo">
-    <h1>¡Gracias por tu compra! 🖼️</h1>
-    <p class="message">Aquí tienes el pronóstico exclusivo del día. Este análisis fue preparado especialmente para ayudarte a tomar decisiones informadas.</p>
+  <div class="container">
+    <div class="card">
+      <img src="imagenes/oficiallogo.png" alt="Logo OnePick" class="logo">
+      <h1>¡Gracias por tu compra! 🖼️</h1>
+      <p class="message">Aquí tienes el pronóstico exclusivo del día. Este análisis fue preparado especialmente para ayudarte a tomar decisiones informadas.</p>
 
-    <div class="watermark">
-      <img src="imagenes/c4276c9a-bed6.JPG" alt="Imagen desbloqueada">
-    </div>
+      <div class="watermark">
+        <img src="imagenes/c4276c9a-bed6.JPG" alt="Imagen desbloqueada">
+      </div>
 
-    <div class="actions">
-      <a href="https://instagram.com/onepick_winever" target="_blank">📲 Síguenos en Instagram</a>
-      <a href="https://instagram.com/onepick_winever" target="_blank">📩 Envíanos tu experiencia</a>
-    </div>
+      <div class="actions">
+        <a href="https://instagram.com/onepick_winever" target="_blank">📲 Síguenos en Instagram</a>
+        <a href="https://instagram.com/onepick_winever" target="_blank">📩 Envíanos tu experiencia</a>
+      </div>
 
-    <div class="footer">
-      ¿Problemas para ver la imagen? <a href="https://instagram.com/onepick_winever" target="_blank">Contáctanos aquí</a>.
+      <div class="footer">
+        ¿Problemas para ver la imagen? <a href="https://instagram.com/onepick_winever" target="_blank">Contáctanos aquí</a>.
+      </div>
     </div>
   </div>
 
