--- a/terminos.html
+++ b/terminos.html
@@ -5,20 +5,23 @@
   <title>Términos y Condiciones</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    * {
-      box-sizing: border-box;
+    * { box-sizing: border-box; }
+
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      background: linear-gradient(145deg, #0f0f10, #1c1c1e);
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: #fff;
     }
 
-    body {
-      margin: 0;
-      padding: 40px 20px;
-      min-height: 100vh;
-      background: linear-gradient(145deg, #0f0f10, #1c1c1e);
-      color: #fff;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    .container {
       display: flex;
       justify-content: center;
       align-items: center;
+      min-height: 100vh;
+      padding: 40px 20px;
     }
 
     .card {
@@ -34,23 +37,20 @@
 
     .logo {
       width: 120px;
-      max-width: 100%;
-      height: auto;
       margin: 0 auto 15px;
       display: block;
-      object-fit: contain;
     }
 
     h1 {
       font-size: 1.6rem;
-      margin-bottom: 20px;
       text-align: center;
+      margin-bottom: 20px;
     }
 
     h2 {
       font-size: 1.1rem;
-      margin-top: 25px;
       color: #4caf50;
+      margin-top: 25px;
     }
 
     p {
@@ -64,66 +64,68 @@
       text-decoration: underline;
     }
 
-    .back-link {
-      display: inline-block;
-      margin-top: 20px;
-      font-size: 0.95rem;
-    }
-
     .footer {
       margin-top: 30px;
       font-size: 0.9rem;
       color: #aaa;
       text-align: center;
     }
+
+    .back-link {
+      display: block;
+      margin-top: 20px;
+      font-size: 0.95rem;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
-  <div class="card">
 
-    <img src="imagenes/oficiallogo.png" alt="Logo OnePick" class="logo">
-    
-    <h1>Términos y Condiciones de Uso</h1>
+  <div class="container">
+    <div class="card">
 
-    <p><strong>Fecha de entrada en vigor:</strong> 11 de junio de 2025</p>
+      <img src="imagenes/oficiallogo.png" alt="Logo OnePick" class="logo">
+      <h1>Términos y Condiciones de Uso</h1>
 
-    <h2>1. Información general</h2>
-    <p>Este sitio web tiene como finalidad permitir al usuario acceder a pronósticos deportivos y recomendaciones de apuestas de manera informativa, a cambio de un pago único de $20 pesos mexicanos. El contenido ofrecido es generado según el análisis personal del autor y no debe considerarse una garantía de resultados.</p>
+      <p><strong>Fecha de entrada en vigor:</strong> 11 de junio de 2025</p>
 
-    <h2>2. Aceptación de los términos</h2>
-    <p>Al realizar el pago, el usuario acepta de manera expresa e inequívoca estos términos y condiciones. El usuario acepta que queda prohibida la distribución o compartición del contenido sin autorización previa del Onepick. La compra otorga sólo el derecho a verla, no a difundirla ni comercializarla.</p>
+      <h2>1. Información general</h2>
+      <p>Este sitio web permite al usuario acceder a pronósticos deportivos y recomendaciones informativas, a cambio de un pago único de $20 pesos mexicanos.</p>
 
-    <h2>3. Producto ofrecido</h2>
-    <p>El producto es un conjunto de pronósticos deportivos para una fecha determinada. Están basados en el análisis personal del administrador y se entregan en formato digital tras el pago. No se trata de apuestas, ni se gestionan apuestas en nombre de terceros. El contenido puede ser texto, imagen digital o ambas.</p>
+      <h2>2. Aceptación de los términos</h2>
+      <p>Al pagar, el usuario acepta estos términos y se compromete a no redistribuir el contenido.</p>
 
-    <h2>4. Pago y acceso</h2>
-    <p>El pago es único, no recurrente, y se realiza a través de una plataforma segura como MercadoPago. El acceso a la imagen se habilita inmediatamente después del pago, ya sea mediante redirección automática o a través de un enlace de redireccionamiento disponible en la página de pago.</p>
+      <h2>3. Producto ofrecido</h2>
+      <p>Pronósticos deportivos en formato digital preparados por OnePick.</p>
 
-    <h2>5. Limitaciones de Responsabilidades</h2>
-    <p>El usuario entiende y acepta que los pronósticos ofrecidos no garantizan resultados positivos ni retornos económicos. Se trata de recomendaciones informativas que el usuario decide usar bajo su propio criterio y responsabilidad. El administrador no es responsable por decisiones tomadas por el usuario con base en estos contenidos.</p>
+      <h2>4. Pago y acceso</h2>
+      <p>El acceso es inmediato tras el pago a través de MercadoPago.</p>
 
-    <h2>6. Política de no reembolso</h2>
-    <p>Debido a la naturaleza digital del contenido y al acceso inmediato tras el pago, <strong>no se realizarán reembolsos</strong> bajo ninguna circunstancia.</p>
+      <h2>5. Limitación de responsabilidades</h2>
+      <p>No se garantizan resultados. El contenido es informativo.</p>
 
-    <h2>7. Disponibilidad</h2>
-    <p>Aunque se procura que el acceso a la imagen esté siempre disponible, podría haber interrupciones por mantenimiento, problemas técnicos o actualizaciones. En dichos casos, se notificará de inmediato y se intentará restablecer el servicio a la brevedad.</p>
+      <h2>6. Política de no reembolso</h2>
+      <p>No se realizan reembolsos por tratarse de contenido digital.</p>
 
-    <h2>8. Cambios a los términos</h2>
-    <p>Nos reservamos el derecho de modificar estos términos y condiciones en cualquier momento. Las modificaciones entrarán en vigor desde su publicación en esta página.</p>
+      <h2>7. Disponibilidad</h2>
+      <p>Puede haber interrupciones por mantenimiento o fallas técnicas.</p>
 
-    <h2>9. Contacto</h2>
-    <p>Para cualquier duda relacionada con estos términos, puedes enviar un mensaje directo a nuestra cuenta oficial de Instagram: 
-      <a href="https://instagram.com/onepick_winever" target="_blank">@Onepic_winever</a>
-    </p>
+      <h2>8. Cambios</h2>
+      <p>Nos reservamos el derecho a modificar estos términos.</p>
 
-    <div class="footer">
-      <p>Al pagar, el usuario declara haber leído, comprendido y aceptado estos términos y condiciones.</p>
+      <h2>9. Contacto</h2>
+      <p>Contáctanos en <a href="https://instagram.com/onepick_winever" target="_blank">@onepick_winever</a></p>
+
+      <div class="footer">
+        Al pagar, aceptas estos términos.
+      </div>
+
+      <p class="back-link">
+        <a href="index.html">🔙 Volver a la página principal</a>
+      </p>
+
     </div>
-
-    <p class="back-link">
-      <a href="https://secretscores.github.io/secretscores/index.html">🔙 Volver a la página principal</a>
-    </p>
-
   </div>
+
 </body>
 </html>
