--- a/sSag0fb0be.html
+++ b/sSag0fb0be.html
@@ -4,29 +4,30 @@
   <meta charset="UTF-8">
   <title>Imagen desbloqueada - OnePick</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
-    * { box-sizing: border-box; }
+    * {
+      box-sizing: border-box;
+    }
 
     html, body {
       margin: 0;
       padding: 0;
-      height: 100%;
       background: linear-gradient(145deg, #0f0f10, #1c1c1e);
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       color: #fff;
     }
 
     .container {
-      height: 100vh;
       display: flex;
       justify-content: center;
-      align-items: center;
-      padding: 20px;
+      padding: 40px 20px;
+      min-height: 100vh;
     }
 
     .card {
       background-color: #1e1e21;
-      padding: 30px;
+      padding: 30px 30px 40px;
       border-radius: 20px;
       box-shadow: 0 10px 30px rgba(0,0,0,0.3);
       text-align: center;
@@ -37,10 +38,11 @@
 
     .logo {
       width: 120px;
-      margin-bottom: 15px;
+      max-width: 100%;
+      height: auto;
+      margin: 0 auto 15px;
       display: block;
-      margin-left: auto;
-      margin-right: auto;
+      object-fit: contain;
     }
 
     h1 {
@@ -51,8 +53,8 @@
 
     .message {
       font-size: 1rem;
-      color: #ccc;
       margin-bottom: 20px;
+      color: #ccc;
     }
 
     .watermark {
@@ -77,19 +79,20 @@
     }
 
     .actions {
-      margin-top: 20px;
       display: flex;
       flex-direction: column;
       gap: 12px;
+      margin-top: 20px;
     }
 
     .actions a {
       background-color: #4caf50;
       color: #fff;
+      text-decoration: none;
       padding: 10px 18px;
       border-radius: 8px;
-      text-decoration: none;
       font-weight: bold;
+      transition: background 0.2s ease;
     }
 
     .actions a:hover {
@@ -106,6 +109,10 @@
       color: #4caf50;
       text-decoration: none;
     }
+
+    .footer a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -113,7 +120,7 @@
   <div class="container">
     <div class="card">
       <img src="imagenes/oficiallogo.png" alt="Logo OnePick" class="logo">
-      <h1>¡Gracias por tu compra! 🖼️</h1>
+      <h1>¡Gracias por tu compra! 📈</h1>
       <p class="message">Aquí tienes el pronóstico exclusivo del día. Este análisis fue preparado especialmente para ayudarte a tomar decisiones informadas.</p>
 
       <div class="watermark">
