--- a/sSag0fb0be.html
+++ b/sSag0fb0be.html
@@ -124,7 +124,7 @@
       <p class="message">Aquí tienes el pronóstico exclusivo del día. Este análisis fue preparado especialmente para ayudarte a tomar decisiones informadas.</p>
 
       <div class="watermark">
-        <img src="imagenes/c4276c9a-bed6.JPG" alt="Imagen desbloqueada">
+        <img src="imagenes/Ssag0fb0bepick.jpeg" alt="Imagen desbloqueada">
       </div>
 
       <div class="actions">
