--- a/19062025p1cK34cc.html
+++ b/19062025p1cK34cc.html
@@ -124,7 +124,7 @@
       <p class="message">Aquí tienes el pronóstico exclusivo del día. Este análisis fue preparado especialmente para ayudarte a tomar decisiones informadas.</p>
 
       <div class="watermark">
-        <img src="imagenes/pP3k3eR544.jpeg" alt="Imagen desbloqueada">
+        <img src="imagenes/19062025p1cK34cc.jpeg" alt="Imagen desbloqueada">
       </div>
 
 <br>      
