--- a/index.html
+++ b/index.html
@@ -114,18 +114,12 @@
       <p class="note">Accede al pick exclusivo del día con una sola compra.</p>
       <p>¡Haz clic para pagar y desbloquear el pronóstico completo ahora!</p>
 
-      <p>Opción Momio +124</p>
+      <p>Momio MLB +140</p>
       <!-- BOTÓN MERCADOPAGO -->
       <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
 data-preference-id="611013744-22712f80-36ea-4536-8732-d52ad44ca871" data-source="button">
 </script>
 <br>
-      <p>Opción Momio +180</p>
-
-<!-- BOTÓN MERCADOPAGO -->
-     <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
-data-preference-id="611013744-0c0eee0d-5650-4909-bbab-3a6b1d2c72ea" data-source="button">
-</script>
       
       <p style="font-size: 0.85rem; color: #888;">Al pagar, estás aceptando los términos y condiciones de nuestra comunidad.</p>
       <a href="https://secretscores.github.io/secretscores/terminos.html" class="terminos">Consulta términos y condiciones</a>
