--- a/index.html
+++ b/index.html
@@ -120,6 +120,12 @@
 data-preference-id="611013744-cd2a60aa-4c6d-4a7f-9b79-4769391779b8" data-source="button">
 </script>
 <br>
+      <p>Momio LMB +165</p>
+      <!-- BOTÓN MERCADOPAGO -->
+      <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
+data-preference-id="611013744-a1b270e8-55ae-432b-b19b-f2ec82c2771c" data-source="button">
+</script>
+<br>
       
       <p style="font-size: 0.85rem; color: #888;">Al pagar, estás aceptando los términos y condiciones de nuestra comunidad.</p>
       <a href="https://secretscores.github.io/secretscores/terminos.html" class="terminos">Consulta términos y condiciones</a>
