--- a/c0mb0p1ck35.html
+++ b/c0mb0p1ck35.html
@@ -124,7 +124,7 @@
       <p class="message">Aquí tienes el pronóstico exclusivo del día. Este análisis fue preparado especialmente para ayudarte a tomar decisiones informadas.</p>
 
       <div class="watermark">
-        <img src="imagenes/sWeeeK34cc.jpeg" alt="Imagen desbloqueada">
+        <img src="imagenes/c0mb0p1ck35.jpeg" alt="Imagen desbloqueada">
       </div>
 
 <!--<br>
