--- a/index.html
+++ b/index.html
@@ -110,22 +110,22 @@
       <img src="imagenes/oficiallogo.png" alt="Logo OnePick" class="logo">
       <h1>OnePick</h1>
       <div class="icons">🍀🎯💰</div>
-      <p class="price">Solo $20 MXN</p>
-      <p class="note">Accede al pick exclusivo del día con una sola compra.</p>
+      <p class="price">COMBO disponible $35 MXN</p>
+      <p class="note">Accede al pick COMBO exclusivo del día con una sola compra.</p>
       <p>¡Haz clic para pagar y desbloquear el pronóstico completo ahora!</p>
 
-      <p>Momio MLB +140</p>
+      <p>COMBO MLB +111 & LMB +156</p>
       <!-- BOTÓN MERCADOPAGO -->
       <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
-data-preference-id="611013744-cd2a60aa-4c6d-4a7f-9b79-4769391779b8" data-source="button">
+data-preference-id="611013744-87f82649-a958-47b2-86a1-ac06e779135c" data-source="button">
 </script>
 <br>
-      <p>Momio LMB +165</p>
+   <!--   <p>Momio LMB +165</p> -->
       <!-- BOTÓN MERCADOPAGO -->
-      <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
+    <!--  <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
 data-preference-id="611013744-a1b270e8-55ae-432b-b19b-f2ec82c2771c" data-source="button">
 </script>
-<br>
+<br>-->
       
       <p style="font-size: 0.85rem; color: #888;">Al pagar, estás aceptando los términos y condiciones de nuestra comunidad.</p>
       <a href="https://secretscores.github.io/secretscores/terminos.html" class="terminos">Consulta términos y condiciones</a>
